--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -10,7 +10,11 @@
 
     <div class="input-group rounded">
         <form action="/search" method="POST">
-            <input type="text" name="teacher" placeholder="Search..." class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon">
+            <input type="text" name="teacher" placeholder="Search...(letters only)" 
+            class="form-control rounded" aria-label="Search" 
+            aria-describedby="search-addon"
+            onkeydown="return /[a-z]/i.test(event.key)">
+
             <input type="submit" value="Search" class="input-group-text border-0" id="search-addon">
         </form>
     </div>
